fix: managed z-indexes

--- a/src/components/ClipboardActionTrackerList/ClipboardActionTrackerList.module.scss
+++ b/src/components/ClipboardActionTrackerList/ClipboardActionTrackerList.module.scss
@@ -2,7 +2,7 @@
     // position: absolute;
     // bottom: 0;
     // right: 0;
-    z-index: 100;
+    z-index: 700;
 
     display: flex;
     flex-direction: column;
