--- a/src/components/ClipboardActionTrackerList/Tracker/Tracker.module.scss
+++ b/src/components/ClipboardActionTrackerList/Tracker/Tracker.module.scss
@@ -20,7 +20,7 @@
         top: 0;
         bottom: 0;
         left: 0;
-        z-index: 0;
+        z-index: 1;
 
         width: var(--action-progress);
 
