--- a/src/components/ContextMenu/ContextMenu.module.scss
+++ b/src/components/ContextMenu/ContextMenu.module.scss
@@ -1,5 +1,6 @@
 .wrapper {
     position: absolute;
+    z-index: 999;
 
     width: 200px;
 
