--- a/src/components/Layout/Layout.module.scss
+++ b/src/components/Layout/Layout.module.scss
@@ -21,5 +21,5 @@
 
     bottom: 0;
     right: 0;
-    z-index: 100;
+    z-index: 700;
 }
