--- a/src/components/WindowFrame/WindowFrame.module.scss
+++ b/src/components/WindowFrame/WindowFrame.module.scss
@@ -1,4 +1,6 @@
 .wrapper {
+    position: relative;
+    z-index: 1000;
     display: flex;
     justify-content: space-between;
     align-items: center;
