--- a/src/components/modals/EditFileModal/EditFileModal.module.scss
+++ b/src/components/modals/EditFileModal/EditFileModal.module.scss
@@ -1,6 +1,6 @@
 .portal {
     position: relative;
-    z-index: 200;
+    z-index: 800;
 }
 
 .overlay {
