--- a/src/components/modals/FileExistModal/FileExistModal.module.scss
+++ b/src/components/modals/FileExistModal/FileExistModal.module.scss
@@ -1,6 +1,6 @@
 .portal {
     position: relative;
-    z-index: 200;
+    z-index: 800;
 }
 
 .overlay {
@@ -12,7 +12,6 @@
 
 .modalBody {
     position: absolute;
-
     top: 50%;
     left: 50%;
 
